# imv-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
aur/imv-rs-bin/: PKGBUILD
aur/imv-rs-git/: PKGBUILD
src/: main.rs
src/app/: image_state.rs  mod.rs  navigation.rs  viewer.rs
src/image/: loader.rs
