[package]
name = "imvrs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
egui_extras = { version = "0.33.0", features = ["image", "gif"] }
env_logger = "0.11.8"
image = { version = "0.25.8", features = ["gif"] }
log = "0.4.28"
natord = "1.0.9"
